# storyweave

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Caddyfile  Dockerfile  LICENSE  README.md  REQUEST_EXAMPLES.md  TESTS.MD  concurrency_test.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  hobbit.txt  pyproject.toml  text.txt
.agents/: memory.md
.github/workflows/: ci.yml  publish-ghcr.yml  tests.yml
api/: REQUEST_EXAMPLES.md  app.py  celery_app.py  test_app.py
api/config/: celery_app.py  settings.py
api/db/: database.py
api/kafka/: consumer.py
api/middleware/: rate_limiter.py
api/models/: model.py
api/routers/: analyse.py  direct.py  find_pairs.py  ner.py  relations.py
api/services/: analyse_service.py  book_service.py  callback_client.py  find_pairs_service.py  llm.py  llm_service.py  ner_service.py  relations_service.py  transformers.py  transformers_service.py
api/tasks/: find_pairs_task.py  ner_task.py  relations_task.py
docs/: REQUEST_EXAMPLES.md
old/: book.py  llm.py  main.py  spacy_part.py  transformers_part.py
results/: chapter_1_en_core_web_sm.json  chapter_1_spacy_en_core_web_sm.json  chapter_1_spacy_en_core_web_trf.json  chapter_1_transformers_dbmdz_bert-large-cased-finetuned-conll03-english.json  chapter_1_transformers_dslim_bert-base-NER.json
scripts/: deploy.sh  setup-vm.sh
src/: book.py  book_service.py  llm.py  main.py  spacy.py  spacy_part.py  transformers_part.py
test/: conftest.py  hobbit.json
test/integration/: test_app.py  test_rate_limits.py  test_routes_analyse.py  test_routes_app.py  test_routes_find_pairs.py  test_routes_ner.py  test_routes_relations.py
test/unit/: test_book_service.py  test_find_pairs.py  test_llm_service.py  test_transformers_service.py
