[project]
name = "storyweave"
version = "0.5.0"
description = "Educational project for AI-powered person relationship analysis for books and narratives. Extract entities, map connections, and explore the social graph of any story."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "transformers>=4.57.0",
]
