[project]
name = "storyweave"
version = "0.6.0"
description = "Educational project for AI-powered person relationship analysis for books and narratives. Extract entities, map connections, and explore the social graph of any story."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "celery-types>=0.24.0",
    "fastapi[standard]>=0.135.1",
    "openai>=1.0.0",
    "python-dotenv>=1.2.2",
    "redis>=7.3.0",
    "torch>=2.10.0",
    "transformers>=4.57.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api"]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"